--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "build:dev": "vite build --mode development",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && git add . && git commit -m \"Auto-deploy: $(date +'%Y-%m-%d %H:%M:%S')\" && git push origin main",
+    "deploy:auto": "node deploy.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
