--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,46 @@
     {
       "source": "/personal-portfolio/(.*)",
       "destination": "/personal-portfolio/index.html"
+    }
+  ],
+  "headers": [
+    {
+      "source": "/personal-portfolio/assets/(.*)",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/personal-portfolio/assets/(.*).js",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/javascript"
+        }
+      ]
+    },
+    {
+      "source": "/personal-portfolio/assets/(.*).css",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/css"
+        }
+      ]
+    }
+  ],
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "framework": "vite"
+} 
+{
+  "rewrites": [
+    {
+      "source": "/personal-portfolio/(.*)",
+      "destination": "/personal-portfolio/index.html"
     },
     {
       "source": "/(.*)",
