--- a/vercel.json
+++ b/vercel.json
@@ -1,35 +1,17 @@
 {
   "rewrites": [
     {
-      "source": "/personal-portfolio/(.*)",
-      "destination": "/personal-portfolio/index.html"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
     {
-      "source": "/personal-portfolio/assets/(.*)",
+      "source": "/assets/(.*)",
       "headers": [
         {
           "key": "Cache-Control",
           "value": "public, max-age=31536000, immutable"
-        }
-      ]
-    },
-    {
-      "source": "/personal-portfolio/assets/(.*).js",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "application/javascript"
-        }
-      ]
-    },
-    {
-      "source": "/personal-portfolio/assets/(.*).css",
-      "headers": [
-        {
-          "key": "Content-Type",
-          "value": "text/css"
         }
       ]
     }
